ProTrackDev/force-app/main/default/objects/TR_Release__c/TR_Release__c.object-meta.xml
<CustomObject>
    <description>This object represents a release or phase for a specific project</description>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>