ProTrackDev/force-app/main/default/objects/TR_Release__c/fields/TR_Description__c.field-meta.xml
<CustomField>
    <fullName>TR_Description__c</fullName>
    <description>Description of the release and their main goals</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>