ProTrackDev/force-app/main/default/objects/TR_Release__c/fields/TR_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TR_End_Date__c</fullName>
    <description>End date for the release</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>