ProTrackDev/force-app/main/default/objects/TR_Release__c/fields/TR_Project__c.field-meta.xml
<CustomField>
    <fullName>TR_Project__c</fullName>
    <label>Project</label>
    <referenceTo>TR_Project__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>