ProTrackDev/force-app/main/default/objects/TR_Release__c/fields/TR_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TR_Start_Date__c</fullName>
    <description>Start Date for the release</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>